--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +24,8 @@
     "@angular/router": "^7.2.15",
     "angularx-social-login": "^1.2.7",
     "core-js": "^2.6.5",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
   },
@@ -47,5 +50,9 @@
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
     "typescript": "^3.2.4"
+  },
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.6.0"
   }
 }
