--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.9.1",
+    "@angular/cli": "7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "^7.2.15",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
