--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1",
     "@angular/cli": "7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
